// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`User Snapshots > should match snapshot for minimal user 1`] = `
User {
  "addPaymentSource": [Function],
  "backupCodeEnabled": false,
  "cachedSessionsWithActivities": null,
  "createBackupCode": [Function],
  "createEmailAddress": [Function],
  "createExternalAccount": [Function],
  "createOrganizationEnabled": false,
  "createOrganizationsLimit": null,
  "createPasskey": [Function],
  "createPhoneNumber": [Function],
  "createTOTP": [Function],
  "createWeb3Wallet": [Function],
  "createdAt": 2025-01-01T00:00:00.000Z,
  "delete": [Function],
  "deleteSelfEnabled": true,
  "disableTOTP": [Function],
  "emailAddresses": [],
  "enterpriseAccounts": [],
  "externalAccounts": [],
  "externalId": null,
  "firstName": null,
  "fullName": null,
  "getOrganizationInvitations": [Function],
  "getOrganizationMemberships": [Function],
  "getOrganizationSuggestions": [Function],
  "getPaymentSources": [Function],
  "getSessions": [Function],
  "hasImage": false,
  "id": "user_minimal",
  "imageUrl": "",
  "initializePaymentSource": [Function],
  "isPrimaryIdentification": [Function],
  "lastName": null,
  "lastSignInAt": null,
  "leaveOrganization": [Function],
  "legalAcceptedAt": null,
  "organizationMemberships": [],
  "passkeys": [],
  "passwordEnabled": false,
  "pathRoot": "/me",
  "phoneNumbers": [],
  "primaryEmailAddress": null,
  "primaryEmailAddressId": null,
  "primaryPhoneNumber": null,
  "primaryPhoneNumberId": null,
  "primaryWeb3Wallet": null,
  "primaryWeb3WalletId": null,
  "publicMetadata": {},
  "removePassword": [Function],
  "samlAccounts": [],
  "setProfileImage": [Function],
  "totpEnabled": false,
  "twoFactorEnabled": false,
  "unsafeMetadata": {},
  "update": [Function],
  "updatePassword": [Function],
  "updatedAt": 2025-01-01T00:00:00.000Z,
  "username": null,
  "verifyTOTP": [Function],
  "web3Wallets": [],
}
`;

exports[`User Snapshots > should match snapshot for user instance structure 1`] = `
User {
  "addPaymentSource": [Function],
  "backupCodeEnabled": false,
  "cachedSessionsWithActivities": null,
  "createBackupCode": [Function],
  "createEmailAddress": [Function],
  "createExternalAccount": [Function],
  "createOrganizationEnabled": true,
  "createOrganizationsLimit": null,
  "createPasskey": [Function],
  "createPhoneNumber": [Function],
  "createTOTP": [Function],
  "createWeb3Wallet": [Function],
  "createdAt": 2024-12-31T23:58:20.000Z,
  "delete": [Function],
  "deleteSelfEnabled": true,
  "disableTOTP": [Function],
  "emailAddresses": [
    EmailAddress {
      "attemptVerification": [Function],
      "createEmailLinkFlow": [Function],
      "createEnterpriseSSOLinkFlow": [Function],
      "destroy": [Function],
      "emailAddress": "john@example.com",
      "id": "email_123",
      "linkedTo": [],
      "matchesSsoConnection": undefined,
      "pathRoot": "/me/email_addresses",
      "prepareVerification": [Function],
      "toString": [Function],
      "verification": Verification {
        "attempts": 1,
        "channel": undefined,
        "error": null,
        "expireAt": 2025-01-01T00:00:00.000Z,
        "externalVerificationRedirectURL": null,
        "message": null,
        "nonce": null,
        "pathRoot": "",
        "status": "verified",
        "strategy": "email_code",
        "verifiedAtClient": null,
        "verifiedFromTheSameClient": [Function],
      },
    },
  ],
  "enterpriseAccounts": [],
  "externalAccounts": [],
  "externalId": null,
  "firstName": "John",
  "fullName": "John Doe",
  "getOrganizationInvitations": [Function],
  "getOrganizationMemberships": [Function],
  "getOrganizationSuggestions": [Function],
  "getPaymentSources": [Function],
  "getSessions": [Function],
  "hasImage": true,
  "id": "user_123",
  "imageUrl": "https://example.com/avatar.jpg",
  "initializePaymentSource": [Function],
  "isPrimaryIdentification": [Function],
  "lastName": "Doe",
  "lastSignInAt": 2024-12-31T23:59:10.000Z,
  "leaveOrganization": [Function],
  "legalAcceptedAt": null,
  "organizationMemberships": [],
  "passkeys": [],
  "passwordEnabled": true,
  "pathRoot": "/me",
  "phoneNumbers": [],
  "primaryEmailAddress": EmailAddress {
    "attemptVerification": [Function],
    "createEmailLinkFlow": [Function],
    "createEnterpriseSSOLinkFlow": [Function],
    "destroy": [Function],
    "emailAddress": "john@example.com",
    "id": "email_123",
    "linkedTo": [],
    "matchesSsoConnection": undefined,
    "pathRoot": "/me/email_addresses",
    "prepareVerification": [Function],
    "toString": [Function],
    "verification": Verification {
      "attempts": 1,
      "channel": undefined,
      "error": null,
      "expireAt": 2025-01-01T00:00:00.000Z,
      "externalVerificationRedirectURL": null,
      "message": null,
      "nonce": null,
      "pathRoot": "",
      "status": "verified",
      "strategy": "email_code",
      "verifiedAtClient": null,
      "verifiedFromTheSameClient": [Function],
    },
  },
  "primaryEmailAddressId": "email_123",
  "primaryPhoneNumber": null,
  "primaryPhoneNumberId": null,
  "primaryWeb3Wallet": null,
  "primaryWeb3WalletId": null,
  "publicMetadata": {
    "role": "user",
  },
  "removePassword": [Function],
  "samlAccounts": [],
  "setProfileImage": [Function],
  "totpEnabled": false,
  "twoFactorEnabled": false,
  "unsafeMetadata": {
    "preferences": {
      "theme": "dark",
    },
  },
  "update": [Function],
  "updatePassword": [Function],
  "updatedAt": 2025-01-01T00:00:00.000Z,
  "username": "johndoe",
  "verifyTOTP": [Function],
  "web3Wallets": [],
}
`;
